playground: "Window" action runs a GUI .ptf in its own window
Makes the GUI extension available from the Pontif editor (docs/extensions.md).
A new toolbar button "Window" launches the current buffer as a GUI program.

Why a subprocess: the editor is itself a dasum app that already owns the GLFW
context + window + event loop on the main thread, and runs programs on a
worker thread. A GUI program's window() needs to own GLFW on the root thread
and run its own blocking loop -- which collides with the editor in-process.
So onRunGuiClicked writes the buffer to a temp .ptf and spawns a SEPARATE JVM
running pontif-builtin-gui's GuiLauncher (--enable-native-access, inherited
classpath + stdio), on a worker thread so the editor stays responsive. The
GUI program gets its own window + root thread; no collision. Status reports
when the window closes (or a non-zero exit).

The editor now depends on pontif-builtin-gui so GuiLauncher + dasum are on
the inherited classpath (Maven reorders the reactor so builtin-gui builds
first). Compile-verified; the button itself is exercised manually by running
the editor and clicking Window on a `requires pontif.gui` program. Full clean
reactor green.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>